mobile text wrap fix

--- a/Text.css
+++ b/Text.css
@@ -535,7 +535,9 @@
       transition-duration: 0.5s;
     }
 
-
+    .p-edit{
+      margin: 0px; margin-top: 0px;
+   }
     
     @media (max-width: 768px) {
       .pagecolumn-full {
@@ -570,6 +572,7 @@
       border-bottom-right-radius: 0px;
       margin-right: 0px;
 
+
       border-bottom-left-radius: 60px;
       border-bottom-right-radius: 60px;
 
@@ -585,7 +588,9 @@
 
     }
 
-
+    .p-edit{
+       margin: -50px; margin-top: 30px;
+    }
 
 
 
